WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190465
Fix build error with !LOG_DISABLED in Release mode
https://bugs.webkit.org/show_bug.cgi?id=190465
Summary
Fix build error with !LOG_DISABLED in Release mode
Charlie Turner
Reported
2018-10-11 03:51:52 PDT
Fix build error with !LOG_DISABLED in Release mode
Attachments
Patch
(2.12 KB, patch)
2018-10-11 03:52 PDT
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.16 KB, patch)
2018-10-15 00:57 PDT
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch for landing
(19.26 KB, patch)
2018-10-15 09:54 PDT
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.16 KB, patch)
2018-10-15 09:56 PDT
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Charlie Turner
Comment 1
2018-10-11 03:52:34 PDT
Created
attachment 352034
[details]
Patch
Charlie Turner
Comment 2
2018-10-15 00:57:48 PDT
Created
attachment 352304
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2018-10-15 01:34:41 PDT
Comment on
attachment 352304
[details]
Patch for landing Rejecting
attachment 352304
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 352304, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=352304&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=190465
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 352304 from
bug 190465
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=352304
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebCore/ChangeLog M Source/WebCore/workers/service/ServiceWorkerRegistrationKey.cpp M Source/WebCore/workers/service/ServiceWorkerRegistrationKey.h ERROR from SVN: A repository hook failed: Commit blocked by pre-commit hook (exit code 1) with output: Commits are currently disabled while we update infrastructure. W: 8505ca18e9a2a9550a02430dd969aff801f25597 and refs/remotes/origin/master differ, using rebase: :040000 040000 75fcdfc48799f08707a75d542ad43fc9622dc0fe db349c7d53434e63104b36e19511df8a3253ad7d M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebCore/ChangeLog M Source/WebCore/workers/service/ServiceWorkerRegistrationKey.cpp M Source/WebCore/workers/service/ServiceWorkerRegistrationKey.h ERROR from SVN: A repository hook failed: Commit blocked by pre-commit hook (exit code 1) with output: Commits are currently disabled while we update infrastructure. W: 8505ca18e9a2a9550a02430dd969aff801f25597 and refs/remotes/origin/master differ, using rebase: :040000 040000 75fcdfc48799f08707a75d542ad43fc9622dc0fe db349c7d53434e63104b36e19511df8a3253ad7d M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/9578495
Charlie Turner
Comment 4
2018-10-15 09:54:05 PDT
Created
attachment 352333
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2018-10-15 09:55:50 PDT
Comment on
attachment 352333
[details]
Patch for landing Rejecting
attachment 352333
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 352333, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/9586548
Charlie Turner
Comment 6
2018-10-15 09:56:40 PDT
Created
attachment 352334
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2018-10-15 10:33:29 PDT
Comment on
attachment 352334
[details]
Patch for landing Clearing flags on attachment: 352334 Committed
r237126
: <
https://trac.webkit.org/changeset/237126
>
WebKit Commit Bot
Comment 8
2018-10-15 10:33:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug