Fix build error with !LOG_DISABLED in Release mode https://bugs.webkit.org/show_bug.cgi?id=190465

Reviewed by Michael Catanzaro.

No tests due to no new functionality.

* workers/service/ServiceWorkerRegistrationKey.cpp:
* workers/service/ServiceWorkerRegistrationKey.h:


Canonical link: https://commits.webkit.org/205500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237126 268f45cc-cd09-0410-ab3c-d52691b4dbfc